样式修改，添加地址栏左边图标

--- a/down.html
+++ b/down.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>下载页面</title>
+	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/down.css">
@@ -105,7 +107,7 @@
 			<div class="common-model">
 				<div class="model-title bg2">
 					<span>排队预定 台湾版</span>
-					<small>V6.1</small>
+					<small>V6.1.1</small>
 				</div>
 				<span class="icon pdydtw-svg"></span>
 				<div class="model-detail">
@@ -122,7 +124,7 @@
 				</div>
 				<div class="perv-model">
 					<span>排队预定 台湾版</span>
-					<small>V6.0</small>
+					<small>V6.0.0</small>
 					<a class="a2" href="">下载</a>
 				</div>
 			</div>
@@ -182,7 +184,7 @@
 			<!-- Mobile IOS版 -->
 			<div id="mobileIos" class="common-model">
 				<div class="model-title bg4">
-					<span>Mobile IOS版</span>
+					<span>OnMobile iOS版</span>
 					<small>V6.1</small>
 				</div>
 				<span class="icon mobileiOS-svg"></span>
@@ -199,8 +201,8 @@
 					<span>2011-11-11</span>
 				</div>
 				<div class="perv-model">
-					<span>Mobile IOS版</span>
-					<small>V6.0</small>
+					<span>OnMobile iOS版</span>
+					<small>V1.1.10</small>
 					<a class="a4" href="">下载</a>
 				</div>
 			</div>
@@ -208,7 +210,7 @@
 			<!-- 云拍档 安卓版 -->
 			<div id="ypdAndroid" class="common-model">
 				<div class="model-title bg4">
-					<span>云拍档 安卓版</span>
+					<span>OnMobile 安卓版</span>
 					<small>V6.1</small>
 				</div>
 				<span class="icon ypdaz-svg"></span>
@@ -225,8 +227,8 @@
 					<span>2011-11-11</span>
 				</div>
 				<div class="perv-model">
-					<span>云拍档 安卓版</span>
-					<small>V6.0</small>
+					<span>OnMobile 安卓版</span>
+					<small>V6.0.11</small>
 					<a class="a4" href="">下载</a>
 				</div>
 			</div>
@@ -244,7 +246,6 @@
 			<div class="other-model border-left1">
 				<span>收银 安卓版</span>
 				<small>V5.13.0</small>
-				<small>2011-10-10</small>
 				<a class="a1" href="">下载</a>
 			</div>
 
@@ -252,8 +253,21 @@
 			<div class="other-model border-left1">
 				<span>收银 安卓版</span>
 				<small>V5.13.0</small>
-				<small>2011-10-10</small>
 				<a class="a1" href="">下载</a>
+			</div>
+
+			<!-- 收银 安卓版 -->
+			<div class="other-model border-left2">
+				<span>收银 安卓版</span>
+				<small>V5.13.0</small>
+				<a class="a2" href="">下载</a>
+			</div>
+
+			<!-- 收银 安卓版 -->
+			<div class="other-model border-left2">
+				<span>收银 安卓版</span>
+				<small>V5.13.0</small>
+				<a class="a2" href="">下载</a>
 			</div>
 
 		</div>
