--- a/downAll.html
+++ b/downAll.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>下载页面</title>
 	<!-- <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 	<style type="text/css">
@@ -66,7 +67,7 @@ footer span{
 	background-color: white;
 	box-shadow: 1px 1px 2px #aaaaaa;
 	text-align: center;
-	margin: 0px 5px 20px 5px;
+	margin: 0px 2px 20px 2px;
 }
 .common-v .common-model>img{
 	margin-top: 20px;
@@ -79,7 +80,7 @@ footer span{
 	text-align: center;
 }
 .common-v .model-title small{
-	margin-left: 20px;
+	margin-left: -5px;
 	font-size: 12px;
 }
 .common-v ul{
@@ -113,7 +114,7 @@ footer span{
 .common-v .perv-model{
 	height: 50px;
 	line-height: 50px;
-	font-size: 16px;
+	font-size: 14px;
 	border-top: 1px solid #D4D0D0;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -128,12 +129,13 @@ footer span{
 	float: left;
 }
 .common-v .perv-model a{
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
+	font-size: 12px;
+	width: 40px;
+	height: 20px;
+	line-height: 20px;
 	border-radius: 3px;
 	float: right;
-	margin-top: 10px;
+	margin-top: 15px;
 }
 .bg1{
 	background-color: #c0a7de;
@@ -169,46 +171,45 @@ footer span{
 	display: inline-block;
 }
 .other-v .other-model{
-	font-size: 16px;
+	font-size: 14px;
 	border-radius: 2px;
 	background-color: white;
 	box-shadow: 1px 1px 2px #aaaaaa;
 	text-align: center;
 	float: left;
-	margin: 0 5px 20px 0;
+	margin: 0 2px 14px 2px;
+	line-height: 42px;
 }
 .border-left1{
-	border-left: 5px solid #c0a7de;
+	border-left: 3px solid #c0a7de;
 }
 .border-left2{
-	border-left: 5px solid #f8c36f;
+	border-left: 3px solid #f8c36f;
 }
 .border-left3{
-	border-left: 5px solid #92b3dd;
+	border-left: 3px solid #92b3dd;
 }
 .border-left4{
-	border-left: 5px solid #81d3d2;
+	border-left: 3px solid #81d3d2;
 }
 .other-v .other-model span{
 	float: left;
-	line-height: 65px;
 	margin-left: 10px;
 }
 .other-v .other-model small{
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 5px;
+	margin-right: 5px;
 	color: gray;
 	font-size: 12px;
 	float: left;
-	line-height: 65px;
 }
 .other-v .other-model a{
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
+	width: 40px;
+	height: 20px;
+	line-height: 20px;
 	border-radius: 3px;
 	float: right;
-	margin-top: 17px;
+	margin-top: 12px;
 	margin-right: 10px;
 }
 /* 图标类 */
@@ -255,7 +256,7 @@ header,footer{
 	margin: 0 auto;
 }
 .common-model{
-	width: 24%;
+	width: 24.6%;
 }
 .other-model{
 	width: 49%
@@ -272,10 +273,10 @@ header,footer{
 	margin: 0 auto;
 }
 .common-model{
-	width: 48%;
+	width: 49%;
 }
 .other-model{
-	width: 48%
+	width: 48.5%
 }
 }
 
@@ -397,7 +398,7 @@ header span{
 			<div class="common-model">
 				<div class="model-title bg2">
 					<span>排队预定 台湾版</span>
-					<small>V6.1</small>
+					<small>V6.1.1</small>
 				</div>
 				<span class="icon pdydtw-svg"></span>
 				<div class="model-detail">
@@ -414,7 +415,7 @@ header span{
 				</div>
 				<div class="perv-model">
 					<span>排队预定 台湾版</span>
-					<small>V6.0</small>
+					<small>V6.0.0</small>
 					<a class="a2" href="">下载</a>
 				</div>
 			</div>
@@ -474,7 +475,7 @@ header span{
 			<!-- Mobile IOS版 -->
 			<div id="mobileIos" class="common-model">
 				<div class="model-title bg4">
-					<span>Mobile IOS版</span>
+					<span>OnMobile iOS版</span>
 					<small>V6.1</small>
 				</div>
 				<span class="icon mobileiOS-svg"></span>
@@ -491,8 +492,8 @@ header span{
 					<span>2011-11-11</span>
 				</div>
 				<div class="perv-model">
-					<span>Mobile IOS版</span>
-					<small>V6.0</small>
+					<span>OnMobile iOS版</span>
+					<small>V1.1.10</small>
 					<a class="a4" href="">下载</a>
 				</div>
 			</div>
@@ -500,7 +501,7 @@ header span{
 			<!-- 云拍档 安卓版 -->
 			<div id="ypdAndroid" class="common-model">
 				<div class="model-title bg4">
-					<span>云拍档 安卓版</span>
+					<span>OnMobile 安卓版</span>
 					<small>V6.1</small>
 				</div>
 				<span class="icon ypdaz-svg"></span>
@@ -517,8 +518,8 @@ header span{
 					<span>2011-11-11</span>
 				</div>
 				<div class="perv-model">
-					<span>云拍档 安卓版</span>
-					<small>V6.0</small>
+					<span>OnMobile 安卓版</span>
+					<small>V6.0.11</small>
 					<a class="a4" href="">下载</a>
 				</div>
 			</div>
@@ -536,7 +537,6 @@ header span{
 			<div class="other-model border-left1">
 				<span>收银 安卓版</span>
 				<small>V5.13.0</small>
-				<small>2011-10-10</small>
 				<a class="a1" href="">下载</a>
 			</div>
 
@@ -544,8 +544,21 @@ header span{
 			<div class="other-model border-left1">
 				<span>收银 安卓版</span>
 				<small>V5.13.0</small>
-				<small>2011-10-10</small>
 				<a class="a1" href="">下载</a>
+			</div>
+
+			<!-- 收银 安卓版 -->
+			<div class="other-model border-left2">
+				<span>收银 安卓版</span>
+				<small>V5.13.0</small>
+				<a class="a2" href="">下载</a>
+			</div>
+
+			<!-- 收银 安卓版 -->
+			<div class="other-model border-left2">
+				<span>收银 安卓版</span>
+				<small>V5.13.0</small>
+				<a class="a2" href="">下载</a>
 			</div>
 
 		</div>
